2011-11-03  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>

        [Qt] Fix an assertion under WebPage::setViewportSize.
        https://bugs.webkit.org/show_bug.cgi?id=71473

        Reviewed by Simon Hausmann.

        The web view can have an empty size and it causes the assert in computeViewportAttributes.
        Don't notify the web page of such a size change in this case.

        * UIProcess/API/qt/qtouchwebview.cpp:
        (QTouchWebViewPrivate::updateViewportSize):

2011-11-03  Jesus Sanchez-Palencia  <jesus.palencia@openbossa.org>

        [WK2] State variable name refactor in WebPageProxy.cpp
        https://bugs.webkit.org/show_bug.cgi?id=71467

        Reviewed by Andreas Kling.

        Renaming m_inDecidePolicyForMIMEType to m_inDecidePolicyForResponse after
        https://bugs.webkit.org/show_bug.cgi?id=55827 .

        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::WebPageProxy):
        (WebKit::WebPageProxy::receivedPolicyDecision):
        (WebKit::WebPageProxy::decidePolicyForResponse):
        * UIProcess/WebPageProxy.h:

2011-11-03  Nayan Kumar K  <nayankk@motorola.com>

        [GTK][WEBKIT2] Add support for title property in WebKitWebView.
        https://bugs.webkit.org/show_bug.cgi?id=68074

        Reviewed by Philippe Normand.

        Support for 'title' property is added in WebKitWebView.
        Functions to get the value of this property is provided.

        * UIProcess/API/gtk/WebKitWebLoaderClient.cpp:
        (didReceiveTitleForFrame): LoaderClient titleRecieve callback.
        (webkitWebLoaderClientAttachLoaderClientToPage): Register didReceiveTitleForFrame callback.
        * UIProcess/API/gtk/WebKitWebView.cpp:
        (webkitWebViewGetProperty): 'title' property get function.
        (webkit_web_view_class_init): Register new property.
        (webkitWebViewSetTitle): Notify WebKitWebView about title receive.
        (webkit_web_view_get_title): API to get main frame title.